--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,18 @@
 body{
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100vh; */
 }
 .menu{
-    width: 100%;
-    background-color: #3347B0;
-    height: 100px;
+    /* width: 100vh; */
+    background-color: #A9D6FF;
+    /* height: 100vh; */
 }
 .logo{
-    display: flex;
-    padding: 16px;
-    width: 20%;
+    padding: 1px;
 }
-.sair{
-    background-color: crimson;
+.title{
     display: flex;
-    
-    justify-content: right;
+    justify-content: center;
+    font-size: inherit;
 }
-/* .carregar_todo_header{
-    display: flex;
-} */
+
