--- a/css/card.css
+++ b/css/card.css
@@ -1,4 +1,4 @@
-.row {
+/* .row {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,4 +25,4 @@
     float: right;
     max-width: 64px;
     max-height: 64px;
-  }
+  } */
