--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,13 @@
-header {
-    background-color: black;
-    height: 100px;
+ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0px 16px;
   }
 .menu{
-    /* width: 100vh; */
     background-color: #A9D6FF;
-    /* height: 100vh; */
-}
+    height: 84px;
+ } 
 .logo{
     padding: 1px;
 }
@@ -31,7 +28,130 @@ header {
 .menu_a li:hover{
     border-color: var(--primary-color);
 }
-.container-barra{
+.group {
+    display: flex;
+    line-height: 28px;
+    align-items: center;
+    position: relative;
+    max-width: 190px;
+  }
+  
+  .input {
+    height: 40px;
+    line-height: 28px;
+    padding: 0 1rem;
+    width: 100%;
+    padding-left: 2.5rem;
+    border: 2px solid transparent;
+    border-radius: 8px;
+    outline: none;
+    background-color: #AED8FF;
+    color: #0d0c22;
+    box-shadow: 0 0 5px #a1ccf5, 0 0 0 10px #d5e1f1eb;
+    transition: .3s ease;
+  }
+  
+  .input::placeholder {
+    color: #777;
+  }
+  
+  .icon {
+    position: absolute;
+    left: 1rem;
+    fill: #777;
+    width: 1rem;
+    height: 1rem;
+  }
+a{
+    width: 11.875em;
+    height: 16.5em;
+}
+p {
+    color: black;
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    display: flex;
+    align-items: baseline;
+  }
+  .card {
+    position: relative;
+    width: 11.875em;
+    height: 16.5em;
+    box-shadow: 0px 1px 13px rgba(0,0,0,0.1);
+    cursor: pointer;
+    transition: all 120ms;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    padding: 0.5em;
+    padding-bottom: 3.4em;
+  }
+  
+  .card::after {
+    content: "ver mais!";
+    padding-top: 1.25em;
+    padding-left: 1.25em;
+    position: absolute;
+    left: 0;
+    bottom: -60px;
+    background: #A9D6FF;
+    color: #fff;
+    height: 2.5em;
+    width: 90%;
+    transition: all 80ms;
+    font-weight: 600;
+    text-transform: uppercase;
+    opacity: 0;
+  }
+  
+  .card .title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9em;
+    position: absolute;
+    left: 0.625em;
+    bottom: 1.875em;
+    font-weight: 400;
+    color: #000;
+  }
+  
+  .card .price {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 0.9em;
+    position: absolute;
+    left: 0.625em;
+    bottom: 0.625em;
+    color: #000;
+  }
+  
+  .card:hover::after {
+    bottom: 0;
+    opacity: 1;
+  }
+  
+  .card:active {
+    transform: scale(0.98);
+  }
+  
+  .card:active::after {
+    content: "Added !";
+    height: 3.125em;
+  }
+  
+  .text {
+    max-width: 55px;
+  }
+  
+  .image {
+    background: rgb(241, 241, 241);
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+  }
+
+/* .container-barra{
     height: 36px;
     width: 36px;
     position: absolute;
@@ -75,7 +195,15 @@ header {
 
 .container-barra.active .menu-barra::after {
     transform: rotate(-45deg);
-}
+} */
+footer {
+    background-color:#A9D6FF;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 16px;
+  }
 
 @media (max-width: 960px){
     .container-barra{
@@ -83,3 +211,38 @@ header {
     }
 }
 
+ .card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 12px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0px 0px 8px #0006;
+    padding: 16px;
+    cursor: pointer;
+
+}
+
+.card:hover{
+    box-shadow: 0px 0px 8px #00F6;
+}
+
+.card__image{
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
+}
+
+.card__title{
+    font-size: 1.5rem;
+}
+.card__description{
+    font-size: 1rem;
+}
+.card__price{
+    width: 100%;
+    font-size: 1.5rem;
+    font-weight: 900;
+}
